--- a/css/styles.css
+++ b/css/styles.css
@@ -27,9 +27,82 @@ body {
   -o-transition: 0.2s opacity;
   transition: 0.2s opacity;
   margin-bottom: 10px;
+  text-transform: uppercase;
+  min-width: 100%;
 }
 
 .custom-button:hover, .custom-button:focus {
   cursor: pointer;
   opacity: 0.8;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 33.33% 33.33% 33.33%;
+  text-align: center;
+}
+
+.page-title {
+  text-align: center;
+}
+
+/* modal */
+
+#modal-container {
+  display: none;
+}
+
+#modal-container.is-visible {
+  position: fixed;
+  padding: 20px;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+
+  /* to show it above other content */
+  z-index: 999;
+
+  /* to allow scrolling if the screen is not high enough*/
+  overflow: auto;
+
+  /* this is used to center the modal */
+  display: grid;
+  text-align: center;
+}
+
+.modal {
+  margin: auto;
+  display: inline-block;
+  box-sizing: border-box;
+  background: #fff;
+  padding: 15px;
+  width: 100%;
+  max-width: 300px;
+  text-align: left;
+}
+
+.modal-close {
+  float: right;
+  -webkit-appearance: none;
+  border: 0;
+  background: none;
+  color: #777;
+  text-decoration: underline;
+}
+
+.modal h1 {
+  margin-top: 0;
+  text-transform: uppercase;
+}
+
+.modal p {
+  margin-bottom: 0;
+}
+
+.modal img {
+  display: block;
+  margin: 0px auto;
 }
