--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,7 @@ body {
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   cursor: pointer;
   opacity: 0.8;
+  outline: none;
 }
 
 .modal-title {
@@ -55,4 +56,17 @@ body {
 .navbar-custom {
   background: #FBDE7A !important;
   color: #a040a0;
+}
+
+.btn-secondary {
+  background: #a040a0;
+  border: none;
+}
+
+.btn-secondary:hover, .btn-secondary:focus {
+  background: #a040a0;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  opacity: 0.8;
+  outline: none;
 }
