--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,3 @@
-* {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
 body {
   background: #FBDE7A;
   color: #a040a0;
@@ -61,6 +56,7 @@ body {
 .btn-secondary {
   background: #a040a0;
   border: none;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
 }
 
 .btn-secondary:hover, .btn-secondary:focus {
